// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly horizontally 1`] = `
<DocumentFragment>
  .cache-178dmjg-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="cache-178dmjg-StyledHr eoti1h20"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly vertically 1`] = `
<DocumentFragment>
  .cache-36yo3x-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="vertical"
    class="cache-36yo3x-StyledHr eoti1h20"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color 1`] = `
<DocumentFragment>
  .cache-6vxxak-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #390171;
}

<hr
    aria-orientation="horizontal"
    class="cache-6vxxak-StyledHr eoti1h20"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1du1e5o-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon {
  fill: #4a4f62;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-bottom: 8px;
  background-color: #ffffff;
  fill: #e6e9f0;
}

.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    aria-orientation="horizontal"
    class="cache-1gpqkcp-StyledIconWrapper eoti1h22"
    role="separator"
  >
    <hr
      class="cache-1du1e5o-StyledHr eoti1h20"
    />
    <svg
      class="eoti1h21 etwatq50 cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="cache-1du1e5o-StyledHr eoti1h20"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .cache-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1du1e5o-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon {
  fill: #4a4f62;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-bottom: 8px;
  background-color: #ffffff;
  fill: #e6e9f0;
}

.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    aria-orientation="horizontal"
    class="cache-1gpqkcp-StyledIconWrapper eoti1h22"
    role="separator"
  >
    <hr
      class="cache-1du1e5o-StyledHr eoti1h20"
    />
    <svg
      class="eoti1h21 etwatq50 cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="cache-1du1e5o-StyledHr eoti1h20"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .cache-15vpxe5-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-3xv3x8-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon {
  fill: #4a4f62;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-bottom: 8px;
  background-color: #ffffff;
  fill: #e6e9f0;
}

.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon.cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    aria-orientation="vertical"
    class="cache-15vpxe5-StyledIconWrapper eoti1h22"
    role="separator"
  >
    <hr
      class="cache-3xv3x8-StyledHr eoti1h20"
    />
    <svg
      class="eoti1h21 etwatq50 cache-1xqsx4z-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="cache-3xv3x8-StyledHr eoti1h20"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom thickness 1`] = `
<DocumentFragment>
  .cache-2jhrdy-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 3px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="cache-2jhrdy-StyledHr eoti1h20"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-178dmjg-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="cache-178dmjg-StyledHr eoti1h20"
    role="separator"
  />
</DocumentFragment>
`;
